# pretty-crystal

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: batch-rendering.md
examples/: NaKCl-disordered.cif
examples/series/NaCl-breathing/: frame-00.cif  frame-02.cif  frame-04.cif  frame-05.cif  frame-07.cif  frame-09.cif
scripts/: build_release.py  generate_static_scene.py  soften_colormap.py
src/pretty_crystal/: __init__.py  animation.py  cli.py  figures.py  headless.py  montage.py
src/pretty_crystal/server/: __init__.py  app.py  routes.py
src/pretty_crystal/structures/: __init__.py  connectivity.py  periodic_images.py  polyhedra.py  pxrd.py  readers.py  scene.py  scene_builder.py  (+5 more)
tests/: test_api.py  test_cli.py  test_figures.py  test_structures.py  test_visual.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/patches/: @react-three%2Ffiber@9.6.1.patch
web/src/: main.tsx  vite-env.d.ts
web/tests/: 00-exportFigure.test.ts  App.test.tsx  angleSlider.test.tsx  atomInspector.test.ts  colorSchemes.test.ts  crystalCamera.test.ts  elementLegend.test.ts  elementRadii.test.ts  exportLayout.test.ts  headlessRender.test.ts  latticeScene.test.ts  latticeSceneCameraController.test.tsx  materialPresets.test.ts  millerInput.test.ts  millerPlane.test.ts  orientationControlMath.test.ts  orientationGizmoHitTesting.test.ts  preferences.test.ts  pxrdChart.test.ts  renderStyleExport.test.ts  settings.test.ts  setup.ts  symmetryNotation.test.tsx  trajectoryData.test.ts  vectorEditorModel.test.ts  viewState.test.ts
(+156 files in other folders)
