[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pretty-crystal"
version = "0.1.0"
description = "Local web GUI for rendering crystal structures as publication-ready figures."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "pymatgen-core>=2026.5.18",
    "python-multipart>=0.0.32",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
render = [
    "pillow>=10.0.0",
    "playwright>=1.49.0",
]

[project.scripts]
prc = "pretty_crystal.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "visual: golden-image rendering tests; needs Playwright Chromium (run with -m visual)",
]
addopts = "-m 'not visual'"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
